@@ -2,6 +2,8 @@ Changes in 2.3.5 release (coming soon):
 
 - CPU
   - Fixed critical bug with 0x90 opcode (NOP) handling in x86-64 mode
+  - implied stack references where the stack address is not in canonical form 
+    should causes a stack exception (#SS)
   - Added emulation of SSE4 instructions (Stanislav)
   - Do not save and restore XMM8-XMM15 registers when not in x86-64 mode
   - Fixed zero upper 32-bit part of GPR in x86-64 mode
@@ -11,6 +13,7 @@ Changes in 2.3.5 release (coming soon):
   - Fixed PUSHA/POPA instructions behavior in real mode
   - Fixed detecting of inexact result by FPU
   - Fixed denormals-are-zero (DAZ) handling by SSE convert instructions
+  - Implemented Misaligned Exception Mask support for SSE (MXCSR[17])
 
 - General
   - 2nd simulation support in wxBochs now almost usable (simulation cleanup
